--- a/index.html
+++ b/index.html
@@ -1,223 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css" type="text/css">
-  <script src="https://kit.fontawesome.com/fa6f46c404.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/style.css">
   <title>Cody Clark</title>
 </head>
-
 <body>
-  <header class="container mb-2">
-    <nav class="navbar navbar-expand text-white d-flex justify-content-between">
-      <a href="/" class="navbar-brand text-white mr-auto">
-        <h3>Cody Clark</h3>
-      </a>
-      <nav class="navbar-nav dropdown ">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="contactDropdown" role="button"
-          data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Check me out
-        </a>
-        <nav class="dropdown-menu dropdown-menu-end text-center" aria-labelledby="contactDropdown">
-          <a href="https://github.com/codyclark2119" class="fab fa-github dropdown-item"> Github</a>
-          <a href="https://www.linkedin.com/in/codyclark2119/" class="fab fa-linkedin dropdown-item"> LinkedIn</a>
-          <a href="mailto:cevanclark2119@gmail.com" class="fas fa-envelope-square dropdown-item"> Email</a>
-          <a href="https://drive.google.com/file/d/1q8Kv1AQB0p_Iz6VZeqAszlURJlGJhydN/view?usp=sharing"
-            class="far fa-file dropdown-item"> Resume</a>
-        </nav>
-      </nav>
+
+  <nav class="fixed-top">
+    <nav class="navbar navbar-dark background-p1">
+      <div class="container-fluid justify-content-around">
+        <button class="navbar-toggler ms-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <h1 class="text-center text-light me-5">Cody Clark</h1>
+      </div>
     </nav>
-  </header>
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="background-p1 p-4 text-center d-flex justify-content-around">
+        <h5 class="text-white h4"><a href="#technical-skills">Technical Skills</a></h5>
+        <h5 class="text-white h4"><a href="#bio">Bio</a></h5>
+        <h5 class="text-white h4">Resume</h5>
+        <h5 class="text-white h4">LinkedIn</h5>
+      </div>
+    </div>
+  </nav>
 
+  <div class="parallax"></div>
 
-  <main class="container mb-2 pt-3 pb-5">
-    <div class="row">
-      <section class="col-lg-4 col-md-9 p-3 mx-md-auto">
-        <div class="bio">
-          <figure class="container text-center">
-            <img src="assets/cody.jpg" alt="Cody Clark" id="myImg">
-            <p class="text-white px-5 pt-3">I am a full-stack web developer always looking for a challenge and a new
-              outlet for my
-              creativity.</p>
-          </figure>
-        </div>
-
-      </section>
-      <section class="col-lg-7 col-md-9 mt-md-5 mt-lg-0 mx-auto">
-        <div class="container text-center">
-          <h4>"Change is the law of life, and those who look only to the past or present are certain to miss the
+  <main>
+    <div class="container-fluid background-p1 py-5 container-p1">
+      <div class="row">
+        <section class="col-lg-3 col-md-9 p-3 mx-md-auto">
+          <div class="bio">
+            <figure class="container text-center">
+              <img src="assets/cody.jpg" alt="Cody Clark" id="myImg">
+            </figure>
+          </div>
+        </section>
+        <span class="col-lg-4 align-self-center">
+          <h3>"Change is the law of life, and those who look only to the past or present are certain to miss the
             <strong>FUTURE</strong>."
-            <br>-John F. Kennedy
-          </h4>
-          <h3 class="mt-5">Tech I enjoy using:</h3>
-          <figure class="container">
-            <div class="row">
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/bootstrap.png"
-                  alt="Bootstrap" class="img-fluid rounded">
-                <p>Bootstrap</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/git.png" alt="Git"
-                  class="img-fluid rounded">
-                <p>Git</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/js.png" alt="JavaScript"
-                  class="img-fluid rounded">
-                <p>JavaScript</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/mongodb.png"
-                  alt="MongoDB" class="img-fluid rounded">
-                <p>MongoDB</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/mysql.png" alt="MySQL"
-                  class="img-fluid rounded">
-                <p>MySQL</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/react.png" alt="React js"
-                  class="img-fluid rounded">
-                <p>React.js</p>
-              </div><br>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/express.png"
-                  alt="Express js" class="img-fluid rounded">
-                <p>ExpressJS</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/node.png" alt="Node js"
-                  class="img-fluid rounded">
-                <p>NodeJS</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/mongoose.png"
-                  alt="Mongoose" class="img-fluid rounded">
-                <p>Mongoose</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/sequelize.png"
-                  alt="Sequelize" class="img-fluid rounded">
-                <p>Sequelize</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/java.png" alt="Java"
-                  class="img-fluid rounded">
-                <p>Java</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/antlr.png" alt="Antlr"
-                  class="img-fluid rounded">
-                <p>Antlr</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/python.png" alt="Python"
-                  class="img-fluid rounded">
-                <p>Python</p>
-              </div>
-              <div class="col-md-2 p-2 m-2 col-sm-2 col-5 text-center tech"><img src="assets/skills/spring-boot.png"
-                  alt="Amazon Web Services" class="img-fluid rounded">
-                <p>Spring Boot</p>
-              </div>
-            </div>
-          </figure>
-        </div>
+            <br>-<strong>John F. Kennedy</strong>
+          </h3>
+        </span>
+        <span class="col-lg-2"></span>
+      </div>
+    </div>
 
-      </section>
+    <div class="parallax" id="bio"></div>
+
+    <div class="container-fluid background-p1 py-5 container-p1" >
+      <div class="row">
+        <span class="col-lg-2"></span>
+        <div class="col-lg-6">
+          <h4>Bio</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
+        </div>
+        <span class="col-lg-4"></span>
+      </div>
+    </div>
+
+    <div class="parallax"></div>
+
+    <div class="container-fluid background-p1 py-5 container-p1" id="technical-skills">
+      <div class="row">
+        <span class="col-lg-1"></span>
+        <div class="col-lg-10">
+          <h4>Technical Skills</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
+        </div>
+        <span class="col-lg-1"></span>
+      </div>
     </div>
   </main>
-
-  <section class="container project text-center mt-md-5 mt-2 pb-3 mb-5 mx-auto">
-    <h1 class="project1">My Projects:</h1>
-    <figure id="myCarousel" class="carousel slide carousel-fade mx-auto" data-bs-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/basic.png" class="d-block" alt="News Scraper">
-          <div class="carousel-caption bg-dark d-none d-md-block">
-            <h3>All the news, fit to scrape</h3>
-            <h5><a href="https://github.com/codyclark2119/NewsScraper" class="m-2">Github Link</a>
-              <a href="https://allthenewsyouneed.herokuapp.com/" class="m-2">Project Link</a>
-            </h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/basic2.png" class="d-block" alt="Class App">
-          <div class="carousel-caption bg-dark d-none d-md-block">
-            <h3>Class Registration App</h3>
-            <h5><a href="https://github.com/igorcweb/class-app" class="m-2">Github Link</a>
-              <a href="https://igorcweb-class-app.herokuapp.com" class="m-2">Project Link</a>
-            </h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/basic1.png" class="d-block" alt="Fakazon">
-          <div class="carousel-caption bg-dark d-none d-md-block">
-            <h3>Fakazon E-Commerce App</h3>
-            <h5><a href="https://github.com/codyclark2119/fakazon2" class="m-2">Github Link</a>
-              <a href="https://fakazon.herokuapp.com/" class="m-2">Project Link</a>
-            </h5>
-          </div>
-        </div>>
-        <a class="carousel-control-prev" data-bs-target="#myCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" data-bs-target="#myCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
-      </div>
-    </figure>
-  </section>
-
-  <section class="row project2">
-    <figure class="col-md-12 text-dark mt-3">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">All the news..Fit to scrape!</h3>
-          <img src="assets/basic.png" class="card-img" alt="News Scraper">
-          <div class="row">
-            <a href="https://github.com/codyclark2119/NewsScraper" class="btn btn-primary mx-auto" role="button">Go to
-              the code!</a>
-            <a href="https://allthenewsyouneed.herokuapp.com/" class="btn btn-primary mx-auto" role="button">Project
-              Link!</a>
-          </div>
-        </div>
-      </div>
-    </figure>
-    <figure class="col-md-12 text-dark mt-3">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Fakazon E-Commerce App</h3>
-          <img src="assets/basic1.png" class="card-img" alt="Fakazon">
-          <div class="row">
-            <a href="https://github.com/codyclark2119/fakazon2" class="btn btn-primary mx-auto" role="button">Go to the
-              code!</a>
-            <a href="https://fakazon.herokuapp.com/" class="btn mx-auto" role="button">Project Link!</a>
-          </div>
-        </div>
-      </div>
-    </figure>
-    <figure class="col-md-12 text-dark mt-3">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Class Registration App</h3>
-          <img src="assets/basic2.png" class="card-img" alt="Class App">
-          <div class="row">
-            <a href="https://github.com/igorcweb/class-app" class="btn btn-primary mx-auto" role="button">Go to the
-              code!</a>
-            <a href="https://igorcweb-class-app.herokuapp.com" class="btn btn-primary mx-auto" role="button">Project
-              Link!</a>
-          </div>
-        </div>
-      </div>
-    </figure>
-  </section>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script>
+  <div class="parallax-2"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
