--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="reset.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style.css">
   <title>Cody Clark</title>
 </head>
@@ -17,27 +20,30 @@
         <button class="navbar-toggler ms-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <h1 class="text-center text-light me-5">Cody Clark</h1>
+        <h1 class="text-center text-light me-5"><a href="#home" class="links-nav">Cody Clark</a></h1>
       </div>
     </nav>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="background-p1 p-4 text-center d-flex justify-content-around">
-        <h5 class="text-white h4"><a href="#technical-skills">Technical Skills</a></h5>
-        <h5 class="text-white h4"><a href="#bio">Bio</a></h5>
-        <h5 class="text-white h4">Resume</h5>
-        <h5 class="text-white h4">LinkedIn</h5>
+        <h5 class="h4"></h5>
+        <h5 class="text-white h4"><a href="#bio" class="links-nav">Bio</a></h5>
+        <h5 class="text-white h4"><a href="#technical-skills" class="links-nav">Technical Skills</a></h5>
+        <h5 class="text-white h4"><a href="#interests" class="links-nav">Intrests</a></h5>
+        <h5 class="text-white h4"><a href="https://docs.google.com/document/d/1yq5KqthdOTDjO1xxtWX2nn3Q7rqXcSRsY7I_9wMJ7Qk/edit?usp=sharing" class="links-nav">Resume</a></h5>
+        <h5 class="text-white h4"><a href="https://www.linkedin.com/in/codyclark2119/" class="links-nav">LinkedIn</a></h5>
+        <h5 class="h4"></h5>
       </div>
     </div>
   </nav>
 
-  <div class="parallax"></div>
+  <div class="parallax" id="home"></div>
 
   <main>
-    <div class="container-fluid background-p1 py-5 container-p1">
-      <div class="row">
+    <div class="container-fluid background-p1 py-5 container-p1 ">
+      <div class="row page-load ">
         <section class="col-lg-3 col-md-9 p-3 mx-md-auto">
           <div class="bio">
-            <figure class="container text-center">
+            <figure class="container text-center ">
               <img src="assets/cody.jpg" alt="Cody Clark" id="myImg">
             </figure>
           </div>
@@ -55,10 +61,10 @@
     <div class="parallax" id="bio"></div>
 
     <div class="container-fluid background-p1 py-5 container-p1" >
-      <div class="row">
+      <div class="row page-load ">
         <span class="col-lg-2"></span>
         <div class="col-lg-6">
-          <h4>Bio</h4>
+          <h4><strong>Bio:</strong></h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
         </div>
         <span class="col-lg-4"></span>
@@ -68,10 +74,23 @@
     <div class="parallax"></div>
 
     <div class="container-fluid background-p1 py-5 container-p1" id="technical-skills">
-      <div class="row">
+      <div class="row page-load ">
         <span class="col-lg-1"></span>
         <div class="col-lg-10">
-          <h4>Technical Skills</h4>
+          <h4><strong>Technical Skills:</strong></h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
+        </div>
+        <span class="col-lg-1"></span>
+      </div>
+    </div>
+
+    <div class="parallax"></div>
+
+    <div class="container-fluid background-p1 py-5 container-p1" id="intrests">
+      <div class="row page-load ">
+        <span class="col-lg-1"></span>
+        <div class="col-lg-10">
+          <h4><strong>Intrests:</strong></h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
         </div>
         <span class="col-lg-1"></span>
