--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
     <div class="container-fluid background-p1 py-5 container-p1" >
       <div class="row page-load ">
-        <span class="col-lg-2"></span>
-        <div class="col-lg-6">
+        <span class="col-lg-3"></span>
+        <div class="col-lg-6 text-center">
           <h4><strong>Bio:</strong></h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
+          <p>Full Stack Web Developer who is passionate about Back End Python and AI development, adaptable to changes, and is a detail oriented programmer. A fast learner who is interested in constantly expanding his knowledge and skills to develop user friendly applications.</p>
         </div>
-        <span class="col-lg-4"></span>
+        <span class="col-lg-3"></span>
       </div>
     </div>
 
@@ -74,7 +74,20 @@
         <span class="col-lg-1"></span>
         <div class="col-lg-10">
           <h4><strong>Technical Skills:</strong></h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
+          <div class="row">
+            <div class="col-md-1"><img class="tech" src="assets/skills/python.png" alt="python"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/react.png" alt="react"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/java.png" alt="java"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/js.png" alt="javascript"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/antlr.png" alt="antlr4"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/mysql.png" alt="mysql"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/sequelize.png" alt="sequelize"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/mongodb.png" alt="mongodb"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/mongoose.png" alt="mongoose"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/node.png" alt="nodejs"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/heroku.png" alt="heroku"></div>
+            <div class="col-md-1"><img class="tech" src="assets/skills/git.png" alt="git"></div>
+          </div>
         </div>
         <span class="col-lg-1"></span>
       </div>
@@ -85,15 +98,20 @@
     <div class="container-fluid background-p1 py-5 container-p1" >
       <div class="row page-load ">
         <span class="col-lg-1"></span>
-        <div class="col-lg-10">
+        <div class="col-lg-10 text-center">
           <h4><strong>interests:</strong></h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid perspiciatis in vel recusandae, laudantium cum quasi commodi obcaecati ad nesciunt minima, error quibusdam harum magnam, saepe optio dolor. Ea, adipisci!</p>
+          <p>Gaming (Video games, Card games, and Roleplaying games), Making Music, Cooking, Playing with my Pets (Emma - Sheep, Duke Zeke and Maple - Dogs, and Nekomamushi - Cat), Reading Books (Manga, Sci-Fi and Fantasy) and Going on Walks with my Wife!</p>
         </div>
         <span class="col-lg-1"></span>
       </div>
     </div>
   </main>
   <div class="parallax-2"></div>
+  <nav class="navbar sticky-bottom background-p1 container-p1 border-bottom-0">
+    <div class="container-fluid justify-content-center">
+      <a class="navbar-brand links-nav" href="#home">™Cody Clark</a>
+    </div>
+  </nav>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
