--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="background-p1 p-4 text-center d-md-flex justify-content-md-around">
         <h5 class="h4"></h5>
-        <h5 class="text-white h4"><a href="#bio" class="links-nav">Bio</a></h5>
-        <h5 class="text-white h4"><a href="#technical-skills" class="links-nav">Technical Skills</a></h5>
-        <h5 class="text-white h4"><a href="#interests" class="links-nav">Intrests</a></h5>
-        <h5 class="text-white h4"><a href="https://docs.google.com/document/d/1yq5KqthdOTDjO1xxtWX2nn3Q7rqXcSRsY7I_9wMJ7Qk/edit?usp=sharing" class="links-nav">Resume</a></h5>
-        <h5 class="text-white h4"><a href="https://www.linkedin.com/in/codyclark2119/" class="links-nav">LinkedIn</a></h5>
+        <h5 class="text-white py-md-0 py-3 h4"><a href="#bio" class="links-nav">Bio</a></h5>
+        <h5 class="text-white py-md-0 py-3 h4"><a href="#technical-skills" class="links-nav">Technical Skills</a></h5>
+        <h5 class="text-white py-md-0 py-3 h4"><a href="#interests" class="links-nav">Intrests</a></h5>
+        <h5 class="text-white py-md-0 py-3 h4"><a href="https://docs.google.com/document/d/1yq5KqthdOTDjO1xxtWX2nn3Q7rqXcSRsY7I_9wMJ7Qk/edit?usp=sharing" class="links-nav">Resume</a></h5>
+        <h5 class="text-white py-md-0 py-3 h4"><a href="https://www.linkedin.com/in/codyclark2119/" class="links-nav">LinkedIn</a></h5>
         <h5 class="h4"></h5>
       </div>
     </div>
@@ -75,18 +75,18 @@
         <div class="col-lg-10">
           <h4><strong>Technical Skills:</strong></h4>
           <div class="row">
-            <div class="col-md-1"><img class="tech" src="assets/skills/python.png" alt="python"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/react.png" alt="react"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/java.png" alt="java"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/js.png" alt="javascript"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/antlr.png" alt="antlr4"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/mysql.png" alt="mysql"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/sequelize.png" alt="sequelize"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/mongodb.png" alt="mongodb"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/mongoose.png" alt="mongoose"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/node.png" alt="nodejs"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/heroku.png" alt="heroku"></div>
-            <div class="col-md-1"><img class="tech" src="assets/skills/git.png" alt="git"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/python.png" alt="python"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/react.png" alt="react"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/java.png" alt="java"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/js.png" alt="javascript"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/antlr.png" alt="antlr4"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/mysql.png" alt="mysql"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/sequelize.png" alt="sequelize"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/mongodb.png" alt="mongodb"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/mongoose.png" alt="mongoose"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/node.png" alt="nodejs"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/heroku.png" alt="heroku"></div>
+            <div class="col-md-1 col-4"><img class="tech" src="assets/skills/git.png" alt="git"></div>
           </div>
         </div>
         <span class="col-lg-1"></span>
@@ -100,7 +100,7 @@
         <span class="col-lg-1"></span>
         <div class="col-lg-10 text-center">
           <h4><strong>interests:</strong></h4>
-          <p>Gaming (Video games, Card games, and Roleplaying games), Making Music, Cooking, Playing with my Pets (Emma - Sheep, Duke Zeke and Maple - Dogs, and Nekomamushi - Cat), Reading Books (Manga, Sci-Fi and Fantasy) and Going on Walks with my Wife!</p>
+          <p>Gaming (Video games, Card games, and Roleplaying games), Making Music, Cooking, Playing with my Pets (Emma - Sheep, Duke Zeke and Maple - Dogs, and Nekomamushi - Cat), Reading Books (Manga, Sci-Fi, and Fantasy) and Going on walks with my Wife!</p>
         </div>
         <span class="col-lg-1"></span>
       </div>
